spacing correction

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -479,6 +479,8 @@ span{
         width: 70%;
         font-size: small;
         margin: 0em auto 0 auto;
+        position: relative;
+        right: 2em;
     }
 
     .work > p:nth-child(2) {
@@ -694,6 +696,7 @@ span{
         width: 70%;
         font-size: small;
         margin: 0em auto 0 auto;
+        right: 0;
     }
 
     .work > p:nth-child(2) {
